--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,17 @@ baseURL = 'https://quobix.com/'
 languageCode = 'en-us'
 title = 'quobix.com'
 enableGitInfo = true
+[markup]
+    [markup.highlight]
+        codeFences = true
+        guessSyntax = false
+        hl_Lines = ""
+        lineNoStart = 1
+        lineNos = false
+        lineNumbersInTable = true
+        noClasses = true
+        style = "dracula"
+        tabWidth = 4
 [frontmatter]
   date = ['date', 'publishDate', 'lastmod']
   expiryDate = ['expiryDate']
