--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ enableGitInfo = true
         lineNoStart = 1
         lineNos = false
         lineNumbersInTable = true
-        noClasses = true
+        noClasses = false
         style = "dracula"
         tabWidth = 4
 [frontmatter]
