--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://main.dxmupw6rf0j7h.amplifyapp.com/'
+baseURL = 'https://www.quobix.com/'
 languageCode = 'en-us'
 title = 'quobix'
 enableGitInfo = true
