finally got it under control.
protip, configure DNS first and then deploy the app.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.quobix.com/'
+baseURL = 'https://quobix.com/'
 languageCode = 'en-us'
 title = 'quobix'
 enableGitInfo = true
