--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
       "experimentalDecorators": true,
-      "outDir": "./static/assets",
+      "outDir": "./dist/",
       "noImplicitAny": true,
       "module": "es6",
       "target": "es6",
       "jsx": "react",
       "allowJs": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "allowSyntheticDefaultImports": true
     }
   }
