--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "scripts": {
     "start": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
-    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "lint": "eslint --ext .ts,.html . --ignore-path .eslintignore && prettier \"**/*.ts\" --check --ignore-path .eslintignore",
+    "format": "eslint --ext .ts,.html . --fix --ignore-path .eslintignore && prettier \"**/*.ts\" --write --ignore-path .eslintignore",
     "test": "tsc && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
+    "@open-wc/testing": "next",
     "css-loader": "^6.3.0",
     "lit": "^2.2.1",
     "style-loader": "^3.3.0",
@@ -17,7 +18,6 @@
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.3.0",
-    "@open-wc/testing": "next",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@web/test-runner": "next",
@@ -40,17 +40,19 @@
     ],
     "rules": {
       "no-unused-vars": "off",
+      "no-unused-expressions": "off",
+      "comma-dangle": "off",
+      "no-var-requires": "off",
+      "linebreak-style": "off",
+      "no-plusplus": "off",
+      "no-param-reassign": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
+      "@typescript-eslint/ban-ts-comment": "off",
       "@typescript-eslint/no-unused-vars": [
         "error"
       ],
       "import/no-unresolved": "off",
-      "import/extensions": [
-        "error",
-        "always",
-        {
-          "ignorePackages": true
-        }
-      ]
+      "import/extensions": "off"
     }
   },
   "prettier": {
