--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
-    "compilerOptions": {
-      "experimentalDecorators": true,
-      "outDir": "./dist/",
-      "noImplicitAny": true,
-      "module": "es6",
-      "target": "es6",
-      "jsx": "react",
-      "allowJs": true,
-      "moduleResolution": "node",
-      "allowSyntheticDefaultImports": true
-    }
-  }
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "outDir": "./build/dist/",
+    "noImplicitAny": false,
+    "module": "es6",
+    "target": "es6",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "./build","./layouts",
+    "web-test-runner.config.mjs", "webpack.config.js"]
+}
