--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "error"
       ],
       "import/no-unresolved": "off",
-      "import/extensions": "off"
+      "import/extensions": "off",
+      "class-methods-use-this": "off"
     }
   },
   "prettier": {
