Rules page, rules list and all rules page templates are in.
Now content can go in!

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
       ],
       "import/no-unresolved": "off",
       "import/extensions": "off",
-      "class-methods-use-this": "off"
+      "class-methods-use-this": "off",
+      "guard-super-call": "off"
     }
   },
   "prettier": {
