--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "style-loader": "^3.3.0",
     "terminal.css": "^0.7.2",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.3.0",
