Tuned up navigation for desktop and mobile.
It all feels right now. added a bunch of content, working on commands and also added in new terminal component - still needs work.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "import/no-unresolved": "off",
       "import/extensions": "off",
       "class-methods-use-this": "off",
-      "guard-super-call": "off"
+      "guard-super-call": "off",
+      "no-continue": "off"
     }
   },
   "prettier": {
