Building out vacuum online experience.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
       "import/extensions": "off",
       "class-methods-use-this": "off",
       "guard-super-call": "off",
-      "no-continue": "off"
+      "no-continue": "off",
+      "no-new": "off",
+      "lit/no-value-attribute": "off"
     }
   },
   "prettier": {
